# route_verbalization

./: CMakeLists.txt  README.md  package.xml
include/route_verbalization/: OntologyManipulator.h
include/route_verbalization/Verbalizers/: PlaceVerbalizer.h  RegionVerbalizer.h  Verbalizer.h  sentences.h
include/route_verbalization/mapManipulators/: MapReader.h
nodes/: draw.cpp  tester.cpp
src/: OntologyManipulator.cpp
src/Verbalizers/: PlaceVerbalizer.cpp  RegionVerbalizer.cpp  sentences.cpp
src/mapManipulators/: MapDrawer.cpp  MapReader.cpp
